--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Local Cache on Self-hosted Runner'
+name: 'Local Cache on Self-hosted Runner - Allow absolute paths'
 description: 'Cache dependencies and build outputs to improve workflow execution time on self hosted machine'
 inputs:
   path:
